--- a/app/assets/css/launcher.css
+++ b/app/assets/css/launcher.css
@@ -543,6 +543,17 @@ button {
     margin-right: 25vh;
     height: 300px;
     width: 300px;
+    animation: float 4s ease-in-out infinite;
+}
+
+@keyframes float {
+    0%, 100% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-4px);
+    }
 }
 
 /* Header on login view. */
@@ -1439,6 +1450,36 @@ button {
     flex-direction: column;
 }
 
+.enviarSkinButton {
+    margin: 10px;
+    padding: 5px 25px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    border-radius: 3px;
+    display: block;
+    border: 0px;
+    font-weight: 700;
+    box-shadow: 0px 0px 14px -7px #cb00ff;
+    background-image: linear-gradient(45deg, #8000ff 0%, #9800b3 51%, #9f00ff 100%);
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+    .enviarSkinButton:hover {
+        background-position: right center;
+        /* change the direction of the change here */
+        color: #fff;
+        text-decoration: none;
+    }
+
+    .enviarSkinButton:active {
+        transform: scale(0.95);
+    }
 .settingsFieldTitle {
     font-size: 14px;
     font-family: 'Avenir Medium';
